--- a/Back_End/Back_End/src/main/resources/application.properties
+++ b/Back_End/Back_End/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Back_End
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hello_shoe_shop?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/hello_shoe_shop_pvt?createDatabaseIfNotExist=true
 
 #db configuration
 spring.datasource.username=root
